After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 745874 - Totem PulseAudio icon missing / broken in GNOME Control Center's Sound controls
Totem PulseAudio icon missing / broken in GNOME Control Center's Sound controls
Status: RESOLVED FIXED
Product: totem
Classification: Core
Component: general
3.14.x
Other GNU Hurd
: Normal minor
: ---
Assigned To: General Totem maintainer(s)
General Totem maintainer(s)
: 746278 (view as bug list)
Depends on:
Blocks:
 
 
Reported: 2015-03-09 03:12 UTC by Jean-François Fortin Tam
Modified: 2015-03-17 12:29 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
screenshot (44.32 KB, image/png)
2015-03-09 03:12 UTC, Jean-François Fortin Tam
Details

Description Jean-François Fortin Tam 2015-03-09 03:12:58 UTC
Created attachment 298849 [details]
screenshot

In the GNOME sound settings, in the Applications tab, Totem's icon is not correctly shown near its volume slider. This is, I'm sure you will agree, totally a show-stopper bug :)

This is on Fedora 21.
Comment 1 Bastien Nocera 2015-03-09 12:05:24 UTC
What's the output of:
echo list-clients | pacmd
?

Is Totem's icon visible in gnome-shell?
Comment 2 Jean-François Fortin Tam 2015-03-09 12:51:01 UTC
Totem's icon is visible in GNOME Shell's application well, dash, and everywhere else yes. Here's the output of echo list-clients | pacmd:


12 client(s) logged in.
    index: 0
	driver: <module-systemd-login.c>
	owner module: 26
	properties:
		application.name = "Login Session 1"
		systemd-login.session = "1"
    index: 2
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "GNOME Volume Control Media Keys"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.id = "org.gnome.VolumeControl"
		application.icon_name = "multimedia-volume-control"
		application.version = "3.14.2"
		application.process.id = "1436"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "gnome-settings-daemon"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 5
	driver: <module-x11-xsmp.c>
	owner module: 33
	properties:
		application.name = "XSMP Session on gnome-session as 
		    10c4ef1b8051823360142586561769842100000013550033"
		xsmp.vendor = "gnome-session"
		xsmp.client.id = 
		    "10c4ef1b8051823360142586561769842100000013550033"
    index: 9
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "mailnotification Plugin"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.process.id = "1928"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "evolution"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
		application.icon_name = "evolution"
    index: 14
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "libcanberra"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.version = "0.30"
		application.id = "org.freedesktop.libcanberra"
		application.process.id = "1436"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "gnome-settings-daemon"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 19
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "gnome-settings-daemon"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		window.x11.display = ":0"
		window.x11.screen = "0"
		application.process.id = "1436"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "gnome-settings-daemon"
		application.language = "fr_CA.UTF-8"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 22
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "CubebUtils"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.process.id = "3195"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "firefox"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
		application.icon_name = "firefox"
    index: 33
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "Firefox"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.icon_name = "firefox"
		application.version = "36.0"
		application.process.id = "3195"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "firefox"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 60
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "GNOME Shell"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.id = "org.gnome.Shell"
		application.icon_name = "start-here"
		application.language = "fr_CA.UTF-8"
		window.x11.screen = "0"
		window.x11.display = ":0"
		application.process.id = "1516"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "gnome-shell"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 61
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "GNOME Shell Volume Control"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		application.id = "org.gnome.VolumeControl"
		application.icon_name = "multimedia-volume-control"
		application.version = "3.14.3"
		application.process.id = "1516"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "gnome-shell"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 64
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "Vidéos"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		media.role = "video"
		application.process.id = "8873"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "totem"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"
    index: 65
	driver: <cli.c>
	owner module: 34
	properties:
		application.name = "UNIX socket client"
Comment 3 Bastien Nocera 2015-03-09 14:03:30 UTC
   index: 64
	driver: <protocol-native.c>
	owner module: 13
	properties:
		application.name = "Vidéos"
		native-protocol.peer = "UNIX socket client"
		native-protocol.version = "29"
		media.role = "video"
		application.process.id = "8873"
		application.process.user = "jeff"
		application.process.host = "kusanagi"
		application.process.binary = "totem"
		application.language = "fr_CA.UTF-8"
		window.x11.display = ":0"
		application.process.machine_id = "some_hash"
		application.process.session_id = "1"

It's missing "application.icon_name" not sure why that would happen.
Comment 4 Bastien Nocera 2015-03-13 09:05:35 UTC
commit a8b5b91071f8e891806a0fba791e33376c8a451e
Author: Bastien Nocera <hadess@hadess.net>
Date:   Fri Mar 13 10:02:29 2015 +0100

    main: Fix Videos icon not showing in volume control
    
    Forcefully set PulseAudio icon property. Seems that PulseAudio's client
    libraries aren't quite working things out in some cases.
    
    https://bugzilla.gnome.org/show_bug.cgi?id=745874

Can't quite figure out why we end up in this case. The icon shows up for me even if it's not set in the properties, and we're setting the properties the same way Rhythmbox is. Most likely a PA client library bug, but this big hammer solves the problem.
Comment 5 Bastien Nocera 2015-03-17 12:29:31 UTC
*** Bug 746278 has been marked as a duplicate of this bug. ***