main: Fix Videos icon not showing in volume control

Forcefully set PulseAudio icon property. Seems that PulseAudio's client
libraries aren't quite working things out in some cases.

https://bugzilla.gnome.org/show_bug.cgi?id=745874